Replace domain references in Commonalities application