@@ -1,10 +1,8 @@
 package tools.vitruv.applications.cbs.commonalities;
 
+import java.util.Collections;
 import java.util.Set;
 
-import tools.vitruv.domains.java.JavaDomainProvider;
-import tools.vitruv.domains.pcm.PcmDomainProvider;
-import tools.vitruv.domains.uml.UmlDomainProvider;
 import tools.vitruv.framework.applications.VitruvApplication;
 import tools.vitruv.framework.domains.VitruvDomain;
 import tools.vitruv.commonalities.CommonalitiesChangePropagationSpecificationProvider;
@@ -23,8 +21,7 @@ public class CbsCommonalitiesApplication implements VitruvApplication {
 
 	@Override
 	public Set<VitruvDomain> getVitruvDomains() {
-		return Set.of(new PcmDomainProvider().getDomain(), new UmlDomainProvider().getDomain(),
-				new JavaDomainProvider().getDomain());
+		return Collections.emptySet();
 	}
 
 }
